--- a/MyHttp/.classpath
+++ b/MyHttp/.classpath
@@ -1,45 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/commons-collections.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/commons-fileupload-1.2.1.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/commons-io-1.3.2.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/commons-lang-2.1.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/ejb3-persistence.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/ezmorph-1.0.2.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/freemarker-2.3.15.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/hibernate--3.3.2.ga.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/hibernate3.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/hibernate-annotations-3.4.0.ga.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/hibernate-commons-annotations-3.3.0.ga.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/hibernate-entitymanager.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/jsf-api.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/jsf-impl.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/json-lib-2.1.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/jta.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/mysql-connector-java-3.1.7-bin.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/ognl-2.7.3.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/slf4j-api-1.5.8.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/slf4j-log4j12-1.5.2.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/standard.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/struts2-core-2.1.8.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/struts2-dojo-plugin-2.1.8.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/struts2-json-plugin-2.1.8.jar"/>
+	<classpathentry kind="lib" path="E:/workspace/lib/xwork-core-2.1.6.jar"/>
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.ws.xfire.MYECLIPSE_XFIRE_CORE"/>
-	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.ws.xfire.MYECLIPSE_XFIRE_JAXB2"/>
-	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.ws.xfire.MYECLIPSE_XFIRE_JAXB1"/>
-	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.ws.xfire.MYECLIPSE_XFIRE_XMLBEANS"/>
-	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.ws.xfire.MYECLIPSE_XFIRE_HTTP_CLIENT"/>
-	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.ws.xfire.MYECLIPSE_XFIRE_SECURITY"/>
-	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.ws.xfire.MYECLIPSE_XFIRE_MISC"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-fileupload-1.2.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-io-1.3.2.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/freemarker-2.3.15.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jsf-api.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jsf-impl.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/json-lib-2.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ognl-2.7.3.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/struts2-core-2.1.8.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/struts2-dojo-plugin-2.1.8.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/struts2-json-plugin-2.1.8.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/xwork-core-2.1.6.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/mysql-connector-java-3.1.7-bin.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/standard.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-beanutils.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-collections.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-lang-2.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ezmorph-1.0.2.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hibernate-entitymanager.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hibernate--3.3.2.ga.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hibernate-annotations-3.4.0.ga.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hibernate-commons-annotations-3.3.0.ga.jar"/>
+	<classpathentry kind="lib" path="D:/zcl/新建文件夹 (4)/commons-httpclient-3.1-rc1.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/log4j-1.2.14.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/slf4j-api-1.5.8.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/slf4j-log4j12-1.5.2.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hibernate3.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/ejb3-persistence.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/antlr-2.7.6.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
