--- a/MyHttp/WebRoot/WEB-INF/web.xml
+++ b/MyHttp/WebRoot/WEB-INF/web.xml
@@ -8,6 +8,27 @@
 	http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	 -->
 
+	 
+  <!--	struts2的配置  Start -->
+  <filter>
+    <filter-name>struts2</filter-name>
+    <filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>struts2</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+   <servlet>
+    <servlet-name>XFireServlet</servlet-name>
+    <servlet-class>org.codehaus.xfire.transport.http.XFireConfigurableServlet</servlet-class>
+    <load-on-startup>2</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>XFireServlet</servlet-name>
+    <url-pattern>/services/*</url-pattern>
+  </servlet-mapping> 
+  
 	<!-- Spring配置和监听start -->
 	<context-param>
 		<!-- 配置多个文件时需要的参数 -->
@@ -19,25 +40,7 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	<!--end -->  
-	 
-  <!--	struts2的配置  Start -->
-  <filter>
-    <filter-name>struts2</filter-name>
-    <filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>struts2</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-<!--   <servlet>
-    <servlet-name>XFireServlet</servlet-name>
-    <servlet-class>org.codehaus.xfire.transport.http.XFireConfigurableServlet</servlet-class>
-    <load-on-startup>2</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>XFireServlet</servlet-name>
-    <url-pattern>/services/*</url-pattern>
-  </servlet-mapping> -->
+  
   <!--	struts2的配置 end -->
   <!--	spring的配置 start -->
   <!--	spring的配置 end -->
