--- a/MyHttp/WebRoot/WEB-INF/web.xml
+++ b/MyHttp/WebRoot/WEB-INF/web.xml
@@ -16,30 +16,36 @@
   </filter>
   <filter-mapping>
     <filter-name>struts2</filter-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>*.action</url-pattern>
   </filter-mapping>
-  
-   <servlet>
-    <servlet-name>XFireServlet</servlet-name>
-    <servlet-class>org.codehaus.xfire.transport.http.XFireConfigurableServlet</servlet-class>
-    <load-on-startup>2</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>XFireServlet</servlet-name>
-    <url-pattern>/services/*</url-pattern>
-  </servlet-mapping> 
   
 	<!-- Spring配置和监听start -->
 	<context-param>
 		<!-- 配置多个文件时需要的参数 -->
 		<param-name>contextConfigLocation</param-name>
 		<!-- 需要加载的配置文件，可以有多个，用逗号或者空格或者分号隔开 -->
-		<param-value>/WEB-INF/classes/spring/application*.xml</param-value>
+		<param-value>/WEB-INF/classes/spring/application*.xml
+		,/WEB-INF/classes/spring/webService.xml
+		</param-value>
 	</context-param>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	<!--end -->  
+	
+	<!-- Xfire Servlet start-->
+	<servlet>
+		<servlet-name>XFireServlet</servlet-name>
+		<display-name>XFire Servlet</display-name>
+		<!-- 不整合时使用org.codehaus.xfire.transport.http.XFireConfigurableServlet -->
+	        <servlet-class>org.codehaus.xfire.spring.XFireSpringServlet</servlet-class>
+	        <load-on-startup>0</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>XFireServlet</servlet-name>
+		<url-pattern>/services/*</url-pattern>
+	</servlet-mapping>
+	<!-- Xfire Servlet end -->
   
   <!--	struts2的配置 end -->
   <welcome-file-list>
